# nix-manipulator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  comparor.py  default.nix  flake.nix  mkdocs.yml  nix-manipulator.nix  parser.py  pyproject.toml  serializor.py  shell.nix
.forgejo/workflows/: test-nix-build.yml  test-on-nixpkgs.yml  test-with-uv.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test-nix-build.yml  test-on-nixpkgs.yml  test-on-ubuntu.yml
docs/: api.md  changelog.md  cli.md  formatting-rules.md  generation.md  index.md
examples/: update_pkg_version.py
nix/modules/: checks.nix  devshells.nix  fmt.nix  overlays.nix
nix/pkgs/nix-manipulator/: package.nix
nix_manipulator/: __init__.py  __main__.py  color.py  conversion.py  converter.py  exceptions.py  format.py  manipulations.py  mapping.py  parser.py  resolution.py  symbols.py  utils.py
nix_manipulator/cli/: __init__.py  main.py  manipulations.py  parser.py
nix_manipulator/cst/: models.py  parser.py  utils.py
nix_manipulator/expressions/: __init__.py  assertion.py  binary.py  binding.py  binding_parser.py  comment.py  ellipses.py  expression.py  float.py  has_attr.py  identifier.py  if_expression.py  import_expression.py  indented_string.py  inherit.py  layout.py  let.py  list.py  operator.py  parenthesis.py  path.py  primitive.py  raw.py  scope.py  select.py  set.py  source_code.py  trivia.py  unary.py  with_statement.py
nix_manipulator/expressions/function/: call.py  definition.py
nix_manipulator/models/: binary.py  binding.py  comment.py  expression.py  identifier.py  inherit.py  layout.py  list.py  path.py  primitive.py  select.py  set.py  with_statement.py
nix_manipulator/models/function/: call.py  definition.py
scripts/: bench_pipeline.py
tests/: fixtures.py  nixfmt_helpers.py  nixpkgs-curated-packages.txt  test_cli.py  test_configure_system.py  test_conversion.py  test_expressions_to_nix.py  test_list_access.py  test_local_nix_files.py  test_nixpkgs.py  test_operators.py  test_parser.py  test_rebuild.py  test_references.py  test_reproduce_nixpkgs.py  test_reproduce_simple.py  test_symbols.py  test_updates.py
tests/expressions/: trl.py
tests/imports/: parenthesized.nix  set.nix  simple.nix  string.nix  test_imports.py
tests/internal/cli/: helpers.py
tests/internal/coverage/: test_attrpath_branches.py  test_audit_coverage.py  test_binary_branches.py  test_binding_inherit_let_branches.py  test_expression_edges.py  test_function_definition_branches.py  test_manipulations_branches.py  test_misc_expression_branches.py  test_trivia_helpers.py
tests/internal/integration/: test_local_nix_files.py  test_reproduce_nixpkgs.py
tests/internal/manipulations/: test_manipulations.py  test_updates.py
tests/internal/parsing/: test_parse_simple.py
tests/internal/utils/: test_cli_helpers.py  test_nixfmt_helpers.py
tests/nix-files/: expression.nix
tests/nix-files/pkgs/: simplistic-01.nix  trl-default.nix
tests/paths/: simple.nix  test_path.py
