[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nix-manipulator"
dynamic = ["version"]
description = "A Python library for parsing, manipulating, and reconstructing Nix source code with high-level abstractions while preserving formatting and comments in RFC-formatted code."
authors = [
    {name = "Hugo Herter", email = "git@hugoherter.com"},
]
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-nix>=0.1.0",
    "pydantic>=2.11.4",
    "pygments>=2.19.1",
]

[project.urls]
Homepage = "https://codeberg.org/hoh/nix-manipulator"
Source = "https://codeberg.org/hoh/nix-manipulator"
Tracker = "https://codeberg.org/hoh/nix-manipulator/issues"

[tool.hatch.version]
path = "nix_manipulator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["nix_manipulator"]

[tool.hatch.metadata]
allow-conda = false

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=nix_manipulator --cov-report=term-missing {args:tests}"
